fix: increase size and spacing of slide inidcators for tap-target sizing check

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -63,16 +63,18 @@
 }
 
 .carousel .carousel-slide-indicators {
+  --carousel-indicator-size: 1.5rem;
+
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
+  gap: calc(var(--carousel-indicator-size) / 2);
 }
 
 .carousel .carousel-slide-indicator button {
-  width: 1rem;
-  height: 1rem;
+  width: var(--carousel-indicator-size);
+  height: var(--carousel-indicator-size);
   padding: 0;
-  border-radius: 1rem;
+  border-radius: 50%;
   background-color: rgba(0 0 0 / 25%);
 }
 
